samples/_failures_safe/1761645008_c0cdbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a863dc0.c: In function ‘main’:
./samples/SAFE/__tmp_3a863dc0.c:132:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  132 |     size_t num
      |     ^~~~~~
./samples/SAFE/__tmp_3a863dc0.c:132:5: error: expected declaration or statement at end of input
